Closed Bug 1053764 Opened 10 years ago Closed 10 years ago

IonMonkey MIPS: Fix build issue caused by bug 1004831

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: rankov, Assigned: rankov)

References

Details

Attachments

(1 file)

The patch 1-track-pc-offsets-during-compile.patch from bug 1004831 has caused build failure on MIPS.
Assignee: nobody → branislav.rankov
Status: NEW → ASSIGNED
Depends on: 1004831
Attachment #8472985 - Flags: review?(kvijayan)
Comment on attachment 8472985 [details] [diff] [review]
Fix-addOutOfLineCode.patch

Review of attachment 8472985 [details] [diff] [review]:
-----------------------------------------------------------------

Cool.  Thanks for addressing this!
Attachment #8472985 - Flags: review?(kvijayan) → review+
https://hg.mozilla.org/mozilla-central/rev/2a8bff1b8b1d
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: